Updated some values.

--- a/template/index.html
+++ b/template/index.html
@@ -39,13 +39,9 @@
                 <h1>HELLO<br> I'M <span>CARLOS</span> VÁZQUEZ</h1>
                 <h2>SOFTWARE ENGINEERING STUDENT</h2>
                 <p class="social-media hidden-xs">
-                    <a href="#" class="fa fa-facebook" data-toggle="tooltip" title="Facebook"></a>
-                    <a href="#" class="fa fa-twitter" data-toggle="tooltip" title="Twitter"></a>
-                    <a href="#" class="fa fa-plus" data-toggle="tooltip" title="Google+"></a>
-                    <a href="#" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin"></a>
-                    <a href="#" class="fa fa-behance" data-toggle="tooltip" title="Behance"></a>
-                    <a href="#" class="fa fa-flickr" data-toggle="tooltip" title="Flicker"></a>
-                    <a href="#" class="fa fa-instagram" data-toggle="tooltip" title="Instagram"></a>
+                    <a href="https://twitter.com/cvazquezlos" class="fa fa-twitter" data-toggle="tooltip" title="Twitter" target="_blank"></a>
+                    <a href="https://github.com/cvazquezlos" class="fa fa-github" data-toggle="tooltip" title="GitHub" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/carlos-vazquez-losada/" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin" target="_blank"></a>
                 </p>
             </div>
         </div>
@@ -200,7 +196,7 @@
                 </div>
             </div>
             <div class="footer clearfix">
-                <a href="#">CARLOS VÁZQUEZ LOSADA</a>
+                <a href="#">CARLOS VÁZQUEZ</a>
                 <p>
                     Copyright © 2017 All right reserved
                 </p>
@@ -331,9 +327,9 @@
                 </div>
             </div>
             <div class="footer clearfix">
-                <a href="#">JOHN DOE</a>
+                <a href="#">CARLOS VÁZQUEZ</a>
                 <p>
-                    Copyright © 2015 All right reserved
+                    Copyright © 2017 All right reserved
                 </p>
             </div>
         </div>
@@ -616,9 +612,9 @@
                 </div>
             </div>
             <div class="footer clearfix">
-                <a href="#">JOHN DOE</a>
+                <a href="#">CARLOS VÁZQUEZ</a>
                 <p>
-                    Copyright © 2015 All right reserved
+                    Copyright © 2017 All right reserved
                 </p>
             </div>
         </div>
@@ -633,7 +629,7 @@
         </div>
         <div class="content-container col-md-7 col-sm-12">
             <div>
-                <h2 class="small-heading">SAY HELLO!</h2>
+                <h2 class="small-heading">CONTACT ME</h2>
 
                 <div class="contact-form col-sm-11 clearfix">
 
@@ -666,32 +662,17 @@
                 <h2 class="small-heading">CONTACT DETAILS</h2>
                 <div class="contact col-sm-4">
                     <p>
-                        <i class="fa fa-map-marker"></i><br> 121 King St, Melbourne VIC
+                        <i class="fa fa-map-marker"></i><br> Arroyomolinos
                     </p>
                 </div>
                 <div class="contact col-sm-4">
                     <p>
-                        <i class="fa fa-phone"></i><br> +00 000 0000 000
+                        <i class="fa fa-phone"></i><br> +34 656 565 066
                     </p>
                 </div>
                 <div class="contact col-sm-4">
                     <p>
-                        <i class="fa fa-fax"></i><br> +00 000 0000 000
-                    </p>
-                </div>
-                <div class="contact col-sm-4">
-                    <p>
-                        <i class="fa fa-phone"></i><br> +00 000 0000 000
-                    </p>
-                </div>
-                <div class="contact col-sm-4">
-                    <p>
-                        <i class="fa fa-envelope"></i><br> dummy@example.com
-                    </p>
-                </div>
-                <div class="contact col-sm-4">
-                    <p>
-                        <i class="fa fa-globe"></i><br> www.example.com
+                        <i class="fa fa-envelope"></i><br> c.vazquezlosada@gmail.com
                     </p>
                 </div>
                 <div class="col-xs-12 social-media">
@@ -705,9 +686,9 @@
                 </div>
             </div>
             <div class="footer clearfix">
-                <a href="#">JOHN DOE</a>
+                <a href="#">CARLOS VÁZQUEZ</a>
                 <p>
-                    Copyright © 2015 All right reserved
+                    Copyright © 2017 All right reserved
                 </p>
             </div>
         </div>
