Education information completed.

--- a/template/index.html
+++ b/template/index.html
@@ -225,26 +225,6 @@
                             </p>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="bullet hidden-xs">
-                        </div>
-                        <div class="education-content">
-                            <h3>University of Graphics<span> / October 2011 - March 2013</span></h3>
-                            <p>
-                                In eu semper velit. Ut laoreet, sapien ac porta aliquam, est enim blandit nisl, ut semper dui justo a sapien. Nam orci ipsum, rutrum semper purus a, posuere molestie lorem. Sed ut nibh lobortis, semper ligula ut, tempus mi. In.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="bullet hidden-xs">
-                        </div>
-                        <div class="education-content">
-                            <h3>University of Graphics<span> / October 2009 - March 2011</span></h3>
-                            <p>
-                                Maecenas hendrerit euismod lorem, vitae mollis odio consectetur a. Aliquam at viverra nunc. Fusce neque lectus, vehicula eget lectus ac, consequat mollis erat. Sed sed interdum nisl. Nulla maximus odio vitae turpis rhoncus tempus. Donec vel elit quis metus rutrum.
-                            </p>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="experience clearfix">
@@ -254,32 +234,9 @@
                         <div class="bullet hidden-xs">
                         </div>
                         <div class="experience-content">
-                            <h3>Senior Web Designer<span> / October 2013 - March 2015<br>
-                            Lorem Ipsum, Inc.</span></h3>
+                            <h3>Founder at Binary Lab<span> / April 2015 - April 2017</span></h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et pulvinar ligula. Praesent maximus ornare quam, id consectetur dui eleifend nec. Nam consectetur orci id nulla varius, quis facilisis dui vulputate. Sed ultrices eu erat non mollis. Phasellus ut libero.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="bullet hidden-xs">
-                        </div>
-                        <div class="experience-content">
-                            <h3>Senior Web Designer<span> / October 2011 - March 2013<br>
-                            Lorem Ipsum, Inc.</span></h3>
-                            <p>
-                                In eu semper velit. Ut laoreet, sapien ac porta aliquam, est enim blandit nisl, ut semper dui justo a sapien. Nam orci ipsum, rutrum semper purus a, posuere molestie lorem. Sed ut nibh lobortis, semper ligula ut, tempus mi. In.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="bullet hidden-xs">
-                        </div>
-                        <div class="experience-content">
-                            <h3>Senior Web Designer<span> / October 2009 - March 2011<br>
-                            Lorem Ipsum, Inc.</span></h3>
-                            <p>
-                                Maecenas hendrerit euismod lorem, vitae mollis odio consectetur a. Aliquam at viverra nunc. Fusce neque lectus, vehicula eget lectus ac, consequat mollis erat. Sed sed interdum nisl. Nulla maximus odio vitae turpis rhoncus tempus. Donec vel elit quis metus rutrum.
+                                For two years, I've been founder at Binary Lab. Binary Lab was a web development and graphic design studio, oriented for individual and organizational customers. We have been working with some of the most used web development tools (fontend and backend) like Angular, TS, JS, Spring, Hybernate, Mustache..., and its packaging with Docker.
                             </p>
                         </div>
                     </div>
@@ -289,39 +246,39 @@
                 <h2 class="small-heading">SKILLS</h2>
                 <div class="clearfix">
                     <div class="skill-container col-sm-4">
-                        <h3>Photoshop</h3>
-                        <div class="skill" data-percent="60">
-                            <span>60%</span>
+                        <h3>Java</h3>
+                        <div class="skill" data-percent="70">
+                            <span>70%</span>
                         </div>
                     </div>
                     <div class="skill-container col-sm-4">
-                        <h3>Illustrator</h3>
+                        <h3>Frontend</h3>
                         <div class="skill" data-percent="65">
                             <span>65%</span>
                         </div>
                     </div>
                     <div class="skill-container col-sm-4">
-                        <h3>Dreamweaver</h3>
+                        <h3>Backend</h3>
                         <div class="skill" data-percent="80">
                             <span>80%</span>
                         </div>
                     </div>
                     <div class="skill-container col-sm-4">
-                        <h3>Design</h3>
+                        <h3>Stadistics</h3>
                         <div class="skill" data-percent="55">
                             <span>55%</span>
                         </div>
                     </div>
                     <div class="skill-container col-sm-4">
-                        <h3>Development</h3>
+                        <h3>Version control tools</h3>
                         <div class="skill" data-percent="90">
                             <span>90%</span>
                         </div>
                     </div>
                     <div class="skill-container col-sm-4">
-                        <h3>Coding</h3>
-                        <div class="skill" data-percent="85">
-                            <span>85%</span>
+                        <h3>General Data Science</h3>
+                        <div class="skill" data-percent="45">
+                            <span>45%</span>
                         </div>
                     </div>
                 </div>
@@ -676,13 +633,9 @@
                     </p>
                 </div>
                 <div class="col-xs-12 social-media">
-                    <a href="#" class="fa fa-facebook" data-toggle="tooltip" title="Facebook"></a>
-                    <a href="#" class="fa fa-twitter" data-toggle="tooltip" title="Twitter"></a>
-                    <a href="#" class="fa fa-plus" data-toggle="tooltip" title="Google+"></a>
-                    <a href="#" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin"></a>
-                    <a href="#" class="fa fa-behance" data-toggle="tooltip" title="Behance"></a>
-                    <a href="#" class="fa fa-flickr" data-toggle="tooltip" title="Flicker"></a>
-                    <a href="#" class="fa fa-instagram" data-toggle="tooltip" title="Instagram"></a>
+                    <a href="https://twitter.com/cvazquezlos" class="fa fa-twitter" data-toggle="tooltip" title="Twitter" target="_blank"></a>
+                    <a href="https://github.com/cvazquezlos" class="fa fa-github" data-toggle="tooltip" title="GitHub" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/carlos-vazquez-losada/" class="fa fa-linkedin" data-toggle="tooltip" title="Linkedin" target="_blank"></a>
                 </div>
             </div>
             <div class="footer clearfix">
