Updated some projects.

--- a/template/index.html
+++ b/template/index.html
@@ -305,18 +305,18 @@
                 <div class="project-container">
                     <div class="project-controls">
                         <button class="filter" data-filter="all">All</button>
-                        <button class="filter" data-filter=".graphic-design">Graphic Design</button>
-                        <button class="filter" data-filter=".web-design">Web Designs</button>
+                        <button class="filter" data-filter=".just-java">Just Java 8</button>
+                        <button class="filter" data-filter=".web-design">Android</button>
                         <button class="filter" data-filter=".app-development">App Development</button>
                     </div>
                     <div class="projet-items clearfix" id="projects">
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix graphic-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_1.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/Java-Algorithms" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-1" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -324,11 +324,11 @@
                         <div class="pop-up-box" id="portfolio-1">
                             <img alt="" src="images/portfolio/image_1.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Java Algorithms</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    The poor information about these algorithms made me think on this repository. If you need to find a solution for some of these algorithmic problems on Internet, you will find solutions on pseudocode, scripting languages, other programming languages like C..., but sometimes you need find a solution in Java.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/Java-Algorithms" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
@@ -373,13 +373,13 @@
                                 <a href="#">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix graphic-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_4.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/Some-Tools-In-Java" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-4" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -387,11 +387,11 @@
                         <div class="pop-up-box" id="portfolio-4">
                             <img alt="" src="images/portfolio/image_4.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Some tools in Java</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    A compilation of some tools I have developed using Java.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/Some-Tools-In-Java" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
@@ -457,13 +457,13 @@
                                 <a href="#">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix graphic-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_8.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/Snake-game" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-8" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -471,11 +471,11 @@
                         <div class="pop-up-box" id="portfolio-8">
                             <img alt="" src="images/portfolio/image_8.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Snake game</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    Developed more than 30 years ago, this game is a simulation of the classic snake game included in Nokia mobile phones at 1998. This implementation is developed in Java, using Design Patterns.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/Snake-game" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix app-development">
