Updated some web development projects.

--- a/template/index.html
+++ b/template/index.html
@@ -307,7 +307,7 @@
                         <button class="filter" data-filter="all">All</button>
                         <button class="filter" data-filter=".just-java">Just Java 8</button>
                         <button class="filter" data-filter=".web-design">Android</button>
-                        <button class="filter" data-filter=".app-development">App Development</button>
+                        <button class="filter" data-filter=".web-development">Web development</button>
                     </div>
                     <div class="projet-items clearfix" id="projects">
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
@@ -331,13 +331,13 @@
                                 <a href="https://github.com/cvazquezlos/Java-Algorithms" target="_blank">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-development">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_2.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/Binary-Lab" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-2" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -345,11 +345,11 @@
                         <div class="pop-up-box" id="portfolio-2">
                             <img alt="" src="images/portfolio/image_2.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Binary Lab</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    Binary Lab is an private service which consists on webpages building and marketing techniques to improve our customers bussiness value.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/Binary-Lab" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix app-development">
@@ -394,13 +394,13 @@
                                 <a href="https://github.com/cvazquezlos/Some-Tools-In-Java" target="_blank">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-development">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_5.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/marinahurtado.com" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-5" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -408,20 +408,20 @@
                         <div class="pop-up-box" id="portfolio-5">
                             <img alt="" src="images/portfolio/image_5.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Marina Hurtado Alia<br>(marinahurtado.com)</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    Marina Hurtado Alia is a dog coach who lives in Madrid, Spain.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/marinahurtado.com" target="_blank">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix app-development">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-development">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_6.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/lydiasanchezpsicologa.com" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-6" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -429,11 +429,11 @@
                         <div class="pop-up-box" id="portfolio-6">
                             <img alt="" src="images/portfolio/image_6.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>Lidia Sánchez</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    No description provided.
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/lydiasanchezpsicologa.com" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
@@ -499,13 +499,13 @@
                                 <a href="#">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
+                        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-development">
                             <div class="project">
                                 <img src="images/portfolio/thumbs/image_10.jpg" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
-                                    <a href="#" class="fa fa-link"></a>
+                                    <a href="https://github.com/cvazquezlos/BREMS-Library-App" class="fa fa-github" target="_blank"></a>
                                     <a href="#portfolio-10" class="fa fa-search show-popup"></a>
                                 </div>
                             </div>
@@ -513,11 +513,11 @@
                         <div class="pop-up-box" id="portfolio-10">
                             <img alt="" src="images/portfolio/image_10.jpg" class=" hidden-xs">
                             <div class="popup-content">
-                                <h3>PROJECT NAME</h3>
+                                <h3>BREMS - Book Reserve Management System</h3>
                                 <p>
-                                    Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
+                                    Online management of resources (books and magazines) in a library. Each resource has a copy which a reader can reserve. This resource will be taken by a reader for 30 days (in case of a books) and for 2 days (in case of magazines). An administrator will manage the resource loans, resource stock and resource copies. Web functionality deppends on type of user (administrator o reader).
                                 </p>
-                                <a href="#">PREVIEW</a>
+                                <a href="https://github.com/cvazquezlos/BREMS-Library-App" target="_blank">PREVIEW</a>
                             </div>
                         </div>
                     </div>
