Added some portfolio images.

--- a/template/index.html
+++ b/template/index.html
@@ -459,7 +459,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                     <div class="project">
-                        <img src="images/portfolio/thumbs/image_8.jpg" alt="">
+                        <img src="images/portfolio/thumbs/image_8.png" alt="">
                         <div class="ovrly">
                         </div>
                         <div class="buttons">
@@ -469,7 +469,7 @@
                     </div>
                 </div>
                 <div class="pop-up-box" id="portfolio-8">
-                    <img alt="" src="images/portfolio/image_8.jpg" class=" hidden-xs">
+                    <img alt="" src="images/portfolio/image_8.png" class=" hidden-xs">
                     <div class="popup-content">
                         <h3>Snake game</h3>
                         <p>
@@ -480,7 +480,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-development">
                     <div class="project">
-                        <img src="images/portfolio/thumbs/image_2.jpg" alt="">
+                        <img src="images/portfolio/thumbs/image_2.png" alt="">
                         <div class="ovrly">
                         </div>
                         <div class="buttons">
@@ -490,7 +490,7 @@
                     </div>
                 </div>
                 <div class="pop-up-box" id="portfolio-2">
-                    <img alt="" src="images/portfolio/image_2.jpg" class=" hidden-xs">
+                    <img alt="" src="images/portfolio/image_2.png" class=" hidden-xs">
                     <div class="popup-content">
                         <h3>Binary Lab</h3>
                         <p>
