Updated some values.

--- a/template/index.html
+++ b/template/index.html
@@ -536,10 +536,10 @@
             <div class="facts clearfix">
                 <div class="col-xs-4">
                     <h3>PROJECTS DONE</h3>
-                    <h1>300+</h1>
+                    <h1>9</h1>
                 </div>
                 <div class="col-xs-4">
-                    <h3>HAPPY CLIENTS</h3>
+                    <h3>HAPPY MOMMENTS</h3>
                     <h1>100+</h1>
                 </div>
                 <div class="col-xs-4">
