Portfolio section finished.

--- a/template/index.html
+++ b/template/index.html
@@ -438,7 +438,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                             <div class="project">
-                                <img src="images/portfolio/thumbs/image_4.jpg" alt="">
+                                <img src="images/portfolio/thumbs/image_4.png" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
@@ -448,7 +448,7 @@
                             </div>
                         </div>
                         <div class="pop-up-box" id="portfolio-4">
-                            <img alt="" src="images/portfolio/image_4.jpg" class=" hidden-xs">
+                            <img alt="" src="images/portfolio/image_4.png" class=" hidden-xs">
                             <div class="popup-content">
                                 <h3>Some tools in Java</h3>
                                 <p>
@@ -502,6 +502,7 @@
                     </div>
                 </div>
             </div>
+            <!--
             <div class="testimonials clearfix">
                 <h2 class="small-heading">SOME WORDS FROM CLIENTS</h2>
                 <div class="testimonials-container col-sm-10 col-sm-offset-1">
@@ -533,6 +534,7 @@
                     </div>
                 </div>
             </div>
+            -->
             <div class="facts clearfix">
                 <div class="col-xs-4">
                     <h3>PROJECTS DONE</h3>
