--- a/template/index.html
+++ b/template/index.html
@@ -115,14 +115,14 @@
         </div>
         <div class="content-container col-md-7 col-sm-12">
             <div class="story clearfix">
-                <h2 class="small-heading">STORY OF GLORY</h2>
+                <h2 class="small-heading">ABOUT ME</h2>
                 <div class="col-lg-11 col-lg-offset-1">
                     <div class="story-content clearfix">
                         <img alt="" src="images/dp.jpg" class="col-xs-offset-1 col-sm-offset-0 col-sm-4 col-xs-10">
                         <div class="col-sm-8 col-xs-12">
-                            <h3>AN AWESOMW DESIGNER ON PLANET</h3>
+                            <h3>Hi, my name is Carlos:</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent volutpat enim arcu, eget tempor nibh congue a. Maecenas faucibus sagittis nibh, in bibendum ex. Donec eu ornare augue, nec cursus arcu. Vivamus accumsan mauris nec nulla bibendum, et eleifend nisl tristique. Pellentesque fringilla lorem id nibh auctor sagittis. Suspendisse non nisl at velit malesuada bibendum.
+                                I'm from Spain and, right now, I'm living in Madrid. I'm 22 years old and I'm currently studying Software Engineering at URJC.
                             </p>
                             <p>
                                 Quisque in tempor sapien, et cursus neque. Nunc pulvinar diam ac dapibus mollis. Etiam id iaculis lorem. Donec bibendum volutpat ante, eu consequat nisi suscipit at. Etiam interdum augue dolor, id auctor felis volutpat sed. Phasellus id ex ultrices, tempus leo eget, volutpat diam. In sit amet magna faucibus, molestie nisi in, hendrerit libero. Morbi auctor velit sagittis, elementum lorem eget, imperdiet nisl.
@@ -179,20 +179,6 @@
                     <p>
                         Vestibulum tincidunt sed dapibus elit, sed accumsan libero. Nam vulputate tincidunt quam quis nibh porttitor, a tincidunt lacinia. Nulla turpis arcu, hendrerit volutpat tincidunt at, eget est.
                     </p>
-                </div>
-            </div>
-            <div class="facts clearfix">
-                <div class="col-xs-4">
-                    <h3>PROJECTS DONE</h3>
-                    <h1>300+</h1>
-                </div>
-                <div class="col-xs-4">
-                    <h3>HAPPY CLIENTS</h3>
-                    <h1>100+</h1>
-                </div>
-                <div class="col-xs-4">
-                    <h3>COFFEE CUPS</h3>
-                    <h1>250+</h1>
                 </div>
             </div>
             <div class="footer clearfix">
