--- a/template/index.html
+++ b/template/index.html
@@ -403,7 +403,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix just-java">
                             <div class="project">
-                                <img src="images/portfolio/thumbs/image_1.jpg" alt="">
+                                <img src="images/portfolio/thumbs/image_1.png" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
@@ -413,7 +413,7 @@
                             </div>
                         </div>
                         <div class="pop-up-box" id="portfolio-1">
-                            <img alt="" src="images/portfolio/image_1.jpg" class=" hidden-xs">
+                            <img alt="" src="images/portfolio/image_1.png" class=" hidden-xs">
                             <div class="popup-content">
                                 <h3>Java Algorithms</h3>
                                 <p>
