Linked CSS correctly.

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lora:400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/main-gold.css" data-pin="img/icofont-location-pin--gold.png">
+    <link rel="stylesheet" href="assets/css/main.css" data-pin="img/icofont-location-pin--gold.png">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -67,7 +67,7 @@
 
 
 
-        <link rel="stylesheet" href="css/main-gold.css" data-pin="img/icofont-location-pin--gold.png">
+        <link rel="stylesheet" href="assets/css/main.css" data-pin="img/icofont-location-pin--gold.png">
 
 
 
@@ -106,7 +106,7 @@
                         </figure>
                     </div>
                     <div class="o-screen-about__col">
-                        <h1 class="u-mb-5">Nick Normann</h1>
+                        <h1 class="u-mb-5">Carlos Vázquez Losada</h1>
                         <span class="c-screen-about__caption">Associated Professor, doctor of biology</span>
                         <ul class="c-socials u-mb-35">
                             <li class="c-socials__item">
