Template almost ready.

--- a/template/index.html
+++ b/template/index.html
@@ -550,20 +550,20 @@
             </div>
             <div class="c-main-footer__top o-container js-main-footer-top"></div>
             <div class="c-main-footer__bottom js-main-footer-bottom">
-                <p class="c-main-footer__text">Jim Robinson. Copyright 2016.</p>
+                <p class="c-main-footer__text">Carlos Vázquez. Copyright 2017.</p>
             </div>
         </footer>
 
     </div>
 
-    <script src="components/jquery.min.js"></script>
-    <script src="components/wow.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/inview.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/inview.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Google map -->
-    <script src="js/map.js"></script>
+    <script src="assets/js/map.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD2GTLh7SeztYAZw5ln9zvSnBmkoFq5OM&callback=initMap">
     </script>
 
